Fix Alignment of Author Details - Book Details - rating - headings padding

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,10 @@
 /* .bg-image{
     background-image: url('../assets/imgs/login-bg.jpg');
 } */
+
+/* Trick */
+body{ 
+    display:flex; 
+    flex-direction:column; 
+  }
+  
