--- a/src/app/components/rating-and-shelve/rating-and-shelve.component.css
+++ b/src/app/components/rating-and-shelve/rating-and-shelve.component.css
@@ -1,6 +1,4 @@
 .ShelvePart{
-    margin-left: 80px;
 }
 .RatingPart{
-    margin-left: 130px;
 }
